--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,8 @@ section{
 section .products{
     
     border: 1px solid black;
+    background-color: white;
+    color: black;
     padding: 20px;
     margin: 20px;
 }
